Created the heading and several subheadings to describe the type of lists will be created. Added comments to indicate if the lists are ordered or unordered.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
 
     <body>
-        
+        <h1>Some Lists</h1>
+
+        <h2>Favorite Food</h2> <!--Unordered List-->
+        <h2>Todo List</h2> <!--Ordered List-->
+        <h2>Places to Visits</h2> <!--Unordered List-->
+        <h2>Top 5 Video Games/Movie</h2> <!--Ordered List-->
     </body>
 </html>
