Created the first unordered list.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <h1>Some Lists</h1>
 
         <h2>Favorite Food</h2> <!--Unordered List-->
+        <ul>
+            <li>Pho</li>
+            <li>KBBQ</li>
+            <li>Tacos</li>
+            <li>Hot/Nashville Chicken Sandwich</li>
+            <li>Oatmeal</li>
+        </ul>
         <h2>Todo List</h2> <!--Ordered List-->
         <h2>Places to Visits</h2> <!--Unordered List-->
         <h2>Top 5 Video Games/Movie</h2> <!--Ordered List-->
