Created the first ordered list.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             <li>Oatmeal</li>
         </ul>
         <h2>Todo List</h2> <!--Ordered List-->
+        <ol>
+            <li>Do Laundry</li>
+            <li>Sweep/mop the floor</li>
+            <li>Clean the litter box</li>
+            <li>Create a meal plan and grocery list for this week</li>
+            <li>Go to bed on time</li>
+        </ol>
         <h2>Places to Visits</h2> <!--Unordered List-->
         <h2>Top 5 Video Games/Movie</h2> <!--Ordered List-->
     </body>
