--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
             <li>Go to bed on time</li>
         </ol>
         <h2>Places to Visits</h2> <!--Unordered List-->
+        <ul>
+            <li>Japan</li>
+            <li>Iceland</li>
+            <li>Antartica</li>
+            <li>Tulum, Mexico</li>
+            <li>All of Europe</li>
+        </ul>
         <h2>Top 5 Video Games/Movie</h2> <!--Ordered List-->
+        <ol>
+            <li>Infinity War/End Game</li>
+            <li>World of Warcraft</li>
+            <li>Elden Ring</li>
+            <li>All of Spiderman</li>
+            <li>The Dark Knight Trilogy</li>
+        </ol>
     </body>
 </html>
